--- a/Pagina_Web/package.json
+++ b/Pagina_Web/package.json
@@ -11,8 +11,12 @@
   },
   "dependencies": {
     "axios": "^1.13.2",
+    "file-saver": "^2.0.5",
+    "jspdf": "^3.0.3",
+    "jspdf-autotable": "^5.0.2",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
