--- a/Backend_Kivo/Kivo_Asistencia/requirements.txt
+++ b/Backend_Kivo/Kivo_Asistencia/requirements.txt
@@ -1,5 +1,6 @@
-Django>=5.2.6
+Django>=5.0
 djangorestframework>=3.15.0
 djangorestframework-simplejwt>=5.3.1
-PyMySQL>=1.1.0
+mysqlclient>=2.2.1
 django-cors-headers>=4.2.0
+PyJWT>=2.8.0
